# Ka-OCR

./: .gitignore  main.py  pyproject.toml  trocr-ka.ipynb  trocr_fine_tuning.ipynb
dataset_gen/: README.md
dataset_gen/generator/: gen.py
ml_training/: extract_nb.py  pyproject.toml  trocr-fine-tuning.ipynb
