[project]
name = "trocr-ka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.2",
    "evaluate>=0.4.6",
    "jiwer>=4.0.0",
    "pillow>=12.1.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers>=4.57.5",
]
